# compact-bitmap-font

./: .gitignore  LICENSE  README.md
docs/: spec.draft.md
docs/drafts/: spec.draft.md
docs/font-design/: font-designer-guide.cbf.md
rust/: Cargo.toml
rust/backend/: Cargo.toml  curl.test.md
rust/backend/src/: main.rs
rust/cbf_wiz/: .gitignore  Cargo.toml  README.md
rust/cbf_wiz/assets/: cc_red_alert_inet.json  cc_red_alert_lan.json
rust/cbf_wiz/src/: cli.rs  font.rs  font_constants.rs  font_wiz.rs  glyph_helper.rs  io_helper.rs  json.rs  main.rs  sampler.rs  types.rs  write_result_helper.rs
rust/cbf_wiz/src/utils/: bit_operations.rs  log.rs  mod.rs  text.rs
rust/cbf_wiz/src/utils/io/: file.rs
rust/cli/: .gitignore  Cargo.toml  README.md
rust/cli/src/: cli.rs  glyph_helper.rs  io_helper.rs  json.rs  main.rs  sampler.rs  types.rs
rust/cli/src/utils/: text.rs
rust/compiler/: Cargo.toml
rust/compiler/src/: error.rs  glyph_helper.rs  lib.rs  macros.rs  sampler.rs  types.rs
web/: cc_red_alert_inet.cbf  cc_red_alert_lan.cbf  index.html  index.js  package.json  styles.css
web/cbf-compiler-frontend/: .gitignore  cc_red_alert_lan.cbf  index.html  markdown.css  package.json
web/cbf-compiler-frontend/public/: font-designer-guide.cbf.md
web/cbf-compiler-frontend/src/: main.ts  style.css  validate-font-config.ts
web/cbf-compiler-frontend/test_data/: ABBA.cbf  broken-config-1.json  reduced.json  x__broken-config-1.json
web/font-demo-app/: README.md  index.debug.html  index.html  index.html.bak  package.json  styles.css
(+14 files in other folders)
