[package]
name = "backend"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["multipart"] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

zip = "4.0.0"

compiler = { path = "../compiler" }
tracing-subscriber = "0.3.19"
