[package]
name = "cbf_wiz"
version = "0.1.0"
edition = "2021"


[dependencies]
image = "0.25.1"
chrono = "0.4.38"
miniserde = "0.1.39"
clap = { version = "4.5.4", features = ["derive"]}

[profile.release]
debug = false
#opt-level = 'z' # or 's' for size optimization with a balance between size and speed
opt-level = 's' # or 's' for size optimization with a balance between size and speed
lto=true
